# ai-physio-assistant

./: .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements-image-gen.txt  requirements.txt
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  completion_checklist.md  project_overview.md  suggested_commands.md
content/: CONTENT_GUIDELINES.md  DALLE_SYSTEM_PROMPT.md  IMAGE_GENERATION_GUIDE.md  PROMPTS_QUICK_REFERENCE.md
content/exercises/: .gitkeep  _template.yaml
content/exercises/ankle_foot/: ankle_circles.yaml  calf_raises.yaml  heel_toe_walks.yaml  plantar_fascia_stretch.yaml  single_leg_balance.yaml  towel_scrunches.yaml
content/exercises/chest/: doorway_pec_stretch.yaml
content/exercises/core/: abdominal_bracing.yaml  dead_bug.yaml  pallof_press.yaml  plank.yaml  side_plank.yaml
content/exercises/hip/: clamshell.yaml  fire_hydrant.yaml  hip_flexor_stretch.yaml  ninety_ninety_stretch.yaml  piriformis_stretch.yaml  seated_hip_internal_rotation.yaml  standing_hip_abduction.yaml
content/exercises/knee/: hamstring_curl.yaml  quad_sets.yaml  step_ups.yaml  straight_leg_raise.yaml  terminal_knee_extension.yaml  wall_sit.yaml
content/exercises/lower_back/: bird_dog.yaml  cat_cow_stretch.yaml  childs_pose.yaml  glute_bridge.yaml  knee_to_chest.yaml  mckenzie_extension.yaml  pelvic_tilts.yaml  supine_spinal_twist.yaml
content/exercises/neck/: chin_tuck.yaml  lateral_neck_flexion.yaml  levator_scapulae_stretch.yaml  neck_rotation.yaml  scalene_stretch.yaml
content/exercises/shoulder/: cross_body_stretch.yaml  pendulum_exercise.yaml  shoulder_external_rotation.yaml  sleeper_stretch.yaml  wall_slides.yaml  ytwl_exercise.yaml
content/exercises/upper_back/: book_opener.yaml  prone_y_raise.yaml  thoracic_extension.yaml  thread_the_needle.yaml
content/exercises/wrist_hand/: wrist_extensor_stretch.yaml  wrist_flexor_stretch.yaml
content/images/: .gitkeep
docs/: ARCHITECTURE.md  CONTENT_WORKFLOW.md
scripts/: generate_images.py
src/: __init__.py
src/ai_physio_assistant/: __init__.py
src/ai_physio_assistant/agent/: __init__.py  agent.py  tools.py
src/ai_physio_assistant/cli/: __init__.py  agent.py  generate_images.py
src/ai_physio_assistant/frontend/: __init__.py  app.py  state.py
src/ai_physio_assistant/frontend/components/: __init__.py  chat_panel.py  exercise_browser.py  routine_editor.py
src/ai_physio_assistant/frontend/services/: __init__.py  exercise_service.py
src/ai_physio_assistant/image_generation/: __init__.py  config.py  prompts.py  service.py
src/ai_physio_assistant/models/: __init__.py  exercise.py  routine.py
src/image_generation/: __init__.py
tests/: __init__.py  conftest.py  test_agent_tools.py  test_exercise_model.py  test_version.py
