[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-physio-assistant"
version = "0.1.0"
description = "An AI-powered assistant that helps physiotherapists create personalized exercise routines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AI Physio Assistant Team" }
]
keywords = [
    "physiotherapy",
    "exercise",
    "healthcare",
    "ai",
    "stable-diffusion",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Image generation with Stable Diffusion XL
# Install with: pip install ai-physio-assistant[image-gen]
# Note: Requires ~10GB disk space and GPU with 8GB+ VRAM
image-gen = [
    "diffusers>=0.25.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "torch>=2.0.0",
    "Pillow>=10.0.0",
    "safetensors>=0.4.0",
]

# Future: Google Cloud Platform integration
# gcp = [
#     "google-cloud-firestore>=2.0.0",
#     "google-cloud-storage>=2.0.0",
#     "google-cloud-aiplatform>=1.0.0",
# ]

# Future: Web frontend
# frontend = [
#     "streamlit>=1.30.0",
# ]

# Future: PDF generation
# pdf = [
#     "weasyprint>=60.0",
# ]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# All optional dependencies (except dev)
all = [
    "ai-physio-assistant[image-gen]",
]

[project.scripts]
# CLI entry points
physio-generate-images = "ai_physio_assistant.cli.generate_images:main"

[project.urls]
Homepage = "https://github.com/trinchetto/ai-physio-assistant"
Repository = "https://github.com/trinchetto/ai-physio-assistant"
Documentation = "https://github.com/trinchetto/ai-physio-assistant#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_physio_assistant"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/content",
    "/scripts",
]

# Ruff configuration (linter + formatter)
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["ai_physio_assistant"]

# Mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "diffusers.*",
    "transformers.*",
    "accelerate.*",
    "torch.*",
    "PIL.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
