[tool.poetry]
name = "ai-physio-assistant"
version = "0.1.0"
description = "An AI-powered assistant that helps physiotherapists create personalized exercise routines"
authors = ["AI Physio Assistant Team"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/trinchetto/ai-physio-assistant"
repository = "https://github.com/trinchetto/ai-physio-assistant"
documentation = "https://github.com/trinchetto/ai-physio-assistant#readme"
keywords = ["physiotherapy", "exercise", "healthcare", "ai", "stable-diffusion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
packages = [
    { include = "ai_physio_assistant", from = "src" }
]

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0.0"
pyyaml = "^6.0"
# Image generation dependencies
diffusers = ">=0.25.0"
transformers = ">=4.36.0"
accelerate = ">=0.25.0"
# Use PyTorch CPU-only to avoid triton dependency issues
torch = {version = ">=2.0.0", source = "pytorch-cpu"}
# Pin numpy to stable version with all platform wheels
numpy = "~2.2.6"
pillow = ">=10.0.0"
safetensors = ">=0.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^7.0.0"
ruff = "^0.14.10"
mypy = "^1.0.0"
pre-commit = "^4.5.1"

[tool.poetry.scripts]
physio-generate-images = "ai_physio_assistant.cli.generate_images:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration (linter + formatter)
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["ai_physio_assistant"]

# Mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "diffusers.*",
    "transformers.*",
    "accelerate.*",
    "torch.*",
    "PIL.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
